# data-ghost-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml  start.sh
.github/workflows/: ci.yml  deploy-production.yml
backend/src/: main.py
backend/src/agents/: ask_graph.py
backend/src/core/: logging.py  middleware.py  request_context.py  settings.py
backend/src/db/: init_db.py  session.py
backend/src/llm/: providers.py  router.py
backend/src/models/: graph_state.py
backend/src/routers/: ask.py  dataset.py  (+2 more)
src/: main.py
src/agents/: ask_graph.py
src/core/: middleware.py  settings.py
src/db/: init_db.py  session.py
src/integrations/: elevenlabs_speech.py  openai_speech.py
src/llm/: providers.py  router.py  types.py
src/routers/: ask.py  dataset.py  health.py  upload.py  voice.py
src/schemas/: api.py
src/services/: answer_service.py  ask_cache_service.py  context_service.py  dataset_service.py  rate_limit_service.py  request_log_service.py  voice_cache_service.py  voice_service.py
src/storage/: repositories.py
src/utils/: strings.py
tests/: conftest.py
tests/e2e/: test_api_smoke.py
tests/integration/: test_ask_cache.py  test_ask_guards.py  test_context_upload.py  test_cost_controls.py  test_rate_limiting.py  test_upload_and_ask.py  test_upload_limits.py  test_upload_validation.py  test_voice_endpoints.py
tests/unit/: test_chunker.py  test_dataset_ingest_edges.py  test_dynamic_planner.py  test_metric_change_decomposition.py  test_settings.py  test_sql_executor.py  test_sql_validator.py
(+35 files in other folders)
